# USB_WASI

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  clean.sh  config.yml  run.sh  run_arduino.sh  run_arduino_native.sh  run_arduino_wasi.sh  run_mass_storage.sh  run_mass_storage_native.sh  run_mass_storage_wasi.sh  run_stadia.sh  run_stadia_wasi.sh
.photon/: settings.json
examples/usb_arduino/: Cargo.toml
examples/usb_arduino/arduino_code/: arduino_code.ino
examples/usb_arduino/src/: main.rs
examples/usb_arduino_native/: Cargo.toml
examples/usb_arduino_native/src/: main.rs
examples/usb_mass_storage/: Cargo.toml
examples/usb_mass_storage/src/: main.rs
examples/usb_mass_storage/wit/: world.wit
examples/usb_mass_storage_native/: Cargo.toml
examples/usb_mass_storage_native/src/: bindings.rs  command_wrapper.rs  main.rs  mass_storage_device.rs
examples/usb_stadia/: Cargo.toml
examples/usb_stadia/src/: bindings.rs
examples/usb_stadia_native/: Cargo.toml
examples/usb_stadia_native/src/: main.rs
usb_component_wasi/: Cargo.toml
usb_component_wasi/src/: lib.rs
usb_component_wasi/src/device/: mod.rs  usbdevice.rs
usb_component_wasi/wit/: world.wit
usb_component_wasi_arduino/: Cargo.toml
usb_component_wasi_arduino/src/: bindings.rs  main.rs
usb_component_wasi_arduino/wit/: world.wit
usb_component_wasi_guest/: Cargo.toml
usb_component_wasi_guest/src/: bindings.rs  main.rs
usb_component_wasi_guest/wit/: world.wit
usb_component_wasi_stadia/: Cargo.toml
usb_component_wasi_stadia/src/: bindings.rs  main.rs
usb_component_wasi_stadia/wit/: world.wit
usb_wasi_host/: Cargo.toml
usb_wasi_host/src/: conversion.rs  device.rs  events.rs  main.rs  usb_host_wasi_view.rs
usb_wasi_host/src/device/: devicehandle.rs  usbdevice.rs
usb_wasi_host/src/events/: device_updates.rs
usb_wasi_host/wit/: device.wit  events.wit  types.wit  world.wit
