[package]
name = "usb-component-wasi-arduino"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:usb-component-wasi-arduino"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:usb" = { path = "../WIT/wit" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = "0.24.0"
async-trait = "0.1.74"
anyhow = "1.0.72"
