[package]
name = "usb-component-wasi-guest"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:usb-component-wasi-guest"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:usb" = { path = "../usb_wasi_host/wit" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.5.0"
