[package]
name = "usb-component-wasi-stadia"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:usb-component-wasi-stadia"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:usb" = { path = "../WIT/wit" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }
async-trait = "0.1.74"
tokio = { version = "1.35.0", features = [ "sync", "macros" ,"io-util","rt","time" ] }
anyhow = "1.0.72"
bitflags = "2.5.0"
