[package]
name = "usb_wasi_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.3.19", features = ["derive"] }
driftwood = "0.0.7"
tide = "0.16.0"
wasmtime = { version = "19.0.2", features = ["component-model"] }
wasmtime-wasi = { version = "19.0.2" }
# wasi-cap-std-sync = '17.0.1'
anyhow = "1.0.72"
async-trait = "0.1.74"
tokio = { version = "1.35.0", features = [ "full" ] }
cap-std = "3.0.0"

futures = "0.3.29"
rusb = "0.9.3"
