[package]
name = "usb-arduino"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:usb-component-wasi-arduino"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:usb" = { path = "../../WIT/wit" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
anyhow = "1.0.72"

# Specify dependencies for when the target is WASI
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen-rt = "0.24.0"

# Specify dependencies for when the target is not WASI
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusb = "0.9.3"
tokio = { version = "1.35.0",  features = [ "full" ] }
memory-stats = "1.1.0"
