[package]
name = "usb-arduino-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.35.0", features = [ "sync", "macros" ,"io-util","rt","time" ] }
anyhow = "1.0.72"
bitflags = "2.5.0"
rusb = "0.9.3"
