[package]
name = "usb-mass-storage-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
rusb = "0.9.3"
bitflags = "2.5.0"
exfat = "0.1.0"
bytes = "1.6.0"
mbrman = "0.5.2"
slice = "0.0.4"
